# recred

./: .env  .env_aws  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  push_to_aws.sh  recred-ssh.pem
api/: Cargo.toml
api/src/: .lib.rs.rustfmt  errors.rs  lib.rs  router.rs
api/src/router/: channel.rs  health.rs  instrument.rs  language.rs  registration.rs  style.rs  team.rs  user.rs  video.rs
core/: Cargo.toml
core/src/: lib.rs  registration.rs  user.rs
db/: Cargo.toml
db/src/: channel.rs  instrument.rs  language.rs  lib.rs  registration.rs  style.rs  team.rs  user.rs
domain/: Cargo.toml
domain/src/: channel.rs  instrument.rs  language.rs  lib.rs  registration.rs  style.rs  team.rs  user.rs
entity/: Cargo.toml
entity/src/: channel.rs  instrument.rs  instrument_local.rs  language.rs  language_local.rs  lib.rs  mod.rs  prelude.rs  registration.rs  role.rs  style.rs  team.rs  user.rs
migration/: Cargo.toml  README.md  instrument.sql  language.sql
migration/src/: lib.rs  m20221106_141400_create_user.rs  m20221123_192127_registration.rs  m20221123_193000_create_language.rs  m20221123_193001_create_instrument.rs  m20221123_193002_create_role.rs  m20221123_193003_create_style.rs  m20221123_201400_create_user.rs
terraform/: .terraform.lock.hcl  data.tf  main.tf  recred.pem  terraform.tfstate  terraform.tfstate.backup  variables.tf
