[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
domain = { path = "../domain" }
entity = { path = "../entity" }
migration = { path = "../migration" }
actix-web = "^4"
actix-cors = "^0.6"
bytes = "1.3.0"
dotenvy = "^0.15"
derive_more = "^0.99"
futures-util = "^0.3"
sea-orm = "^0.10"
serde = { version = "^1", features = ["derive"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
uuid = { version = "^1.2", features = ["v4"] }
