[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "^0.10" # sea-orm version
features = [
    "debug-print",
    "runtime-actix-native-tls",
    "sqlx-postgres",
    "with-chrono",
] 

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
